# report-agent

./: .env.example  LICENSE  README.md  SETUP.md  TEAM_PROMPT_A_RESEARCH_VALIDATION.md  TEAM_PROMPT_B_COMPARISON_REPORT.md  pyproject.toml
data/raw/catl/: 01_industry_market_data.md  02_market_position_business_model.md  03_core_competitiveness.md  04_new_products_swap_ecosystem.md  05_innovation_systems_strategy.md  06_financial_highlights.md  07_global_expansion_capital.md
faiss_index/catl/: index.faiss  index.pkl
faiss_index/common/: index.faiss  index.pkl
faiss_index/lges/: index.faiss  index.pkl
faiss_index/market/: index.faiss  index.pkl
src/: main.py
src/agents/: catl_strategy.py  comparison.py  lges_strategy.py  market_research.py  reflection.py  report_writer.py  supervisor.py  swot.py  validation.py
src/core/: bootstrap.py  rag.py  rag_policy.py  state.py  tools.py
src/graph/: workflow.py
